# gnome-power-manager

./: .cvsignore  .gitignore  .gitlab-ci.yml  AUTHORS  BRANCHES  ChangeLog  CodingStyle  HACKING  MAINTAINERS  Makefile.am  NEWS  README  README.commits  README.cvs  README.md  RELEASE  RELEASE.md  SConstruct  TODO  autogen.sh  config.h.in  configure.ac  configure.in  dbus-interface.html  gnome-power-info.sgml  gnome-power-manager.conf  gnome-power-manager.doap  gnome-power-manager.schemas.in  gnome-power-manager.service.in  gnome-power-manager.sgml  gnome-power-manager.spec.in  gnome-power-preferences.desktop.in  gnome-power-preferences.sgml  gnome-power.conf  gnome-power.modules  gnome-power.schemas.in  gnome-power.spec.in  install-dbus-readme.txt  meson.build  meson_options.txt  (+1 more)
applets/brightness/: .cvsignore  .gitignore  GNOME_BrightnessApplet.server.in.in  GNOME_BrightnessApplet.xml  Makefile.am  brightness-applet.c  brightness-applet.h  gpm-common.h  org.gnome.BrightnessApplet.panel-applet.in.in  org.gnome.panel.applet.BrightnessAppletFactory.service.in
applets/inhibit/: .cvsignore  .gitignore  GNOME_InhibitApplet.server.in.in  Makefile.am  egg-dbus-monitor.c  egg-dbus-monitor.h  gpm-common.c  inhibit-applet.c  inhibit-applet.h  org.gnome.InhibitApplet.panel-applet.in.in  org.gnome.panel.applet.InhibitAppletFactory.service.in
data/: .cvsignore  .gitignore  Makefile.am  gnome-power-manager.conf  gnome-power-manager.desktop.in  gnome-power-manager.desktop.in.in  gnome-power-manager.schemas.in  gnome-power-manager.service.in  gnome-power-manager.spec.in  gnome-power-preferences.desktop.in  gnome-power-preferences.desktop.in.in  gnome-power-statistics.appdata.xml  gnome-power-statistics.appdata.xml.in  gnome-power-statistics.desktop.in  gnome-power-statistics.desktop.in.in  gpm-feedback-widget.glade  gpm-feedback-widget.ui  gpm-graph.glade  gpm-info.glade  gpm-inhibit-test.glade  gpm-inhibit-test.ui  gpm-prefs.glade  gpm-prefs.ui  gpm-statistics-old.glade  gpm-statistics.glade  gpm-statistics.ui  meson.build  org.gnome.PowerStats.desktop.in  org.gnome.PowerStats.desktop.in.in  org.gnome.PowerStats.service.in  org.gnome.power-manager.gschema.migrate  org.gnome.power-manager.gschema.xml  org.gnome.power-manager.gschema.xml.in
data/appdata/: Makefile.am  gnome-power-statistics.appdata.xml.in  meson.build  org.gnome.PowerStats.appdata.xml.in  org.gnome.PowerStats.metainfo.xml.in
data/icons/: Makefile.am  clean_svg_icons.sh  generate_24x24_icons.sh  generate_32x32_icons.sh  generate_48x48_icons.sh  meson.build  render-bitmaps.rb
data/sounds/: Makefile.am
docs/: .cvsignore  Doxyfile.in  Makefile.am  calculate-video-fdi.sh  compile.php  config.xsl  contact.php  dbus-interface.html  dbus-interface.txt  dbus-interface.xml  dbus-test-inhibit.py  dbus_interface.php  faq.html  faq.php  faq.xml  footer.php  gnome-power-manager.html  gnome-power-manager.xml.in  gnome_power_manager.php  gnome_power_prefs.php  header.php  icon-naming.txt  icon-scheme.html  icon-scheme.txt  icon-scheme.xml  index.css  index.html  index.php  menu.php  pm.php  powerbook.php  release-plan.txt  report_bug.html  report_bug.php  roadmap.html  roadmap.xml  sleep-names.html  sleep-names.xml  utopia.repo
docs/code/: Doxyfile.in  Makefile.am
docs/doxygen/: annotated.html  bug.html  dbus-common_8c-source.html  dbus-common_8c.html  dbus-common_8h-source.html  dbus-common_8h.html  dir_000000.html  dirs.html  eggtrayicon_8c-source.html  eggtrayicon_8h-source.html  files.html  functions.html  functions_vars.html  globals.html  (+83 more)
help/: .cvsignore  .gitignore  ChangeLog  Makefile.am  gnome-power-manager.omf.in
libdbus-glib/: Makefile.am  libdbus-monitor-session.c  libdbus-monitor-session.h  libdbus-monitor-system.c  libdbus-monitor-system.h  libdbus-proxy.c  libdbus-proxy.h  libdbus-watch.c  libdbus-watch.h
libdevkit-power/: .gitignore  Makefile.am  dkp-client-device.c  dkp-client-device.h  dkp-client.c  dkp-client.h  dkp-device.c  dkp-device.h  dkp-enum.c  dkp-enum.h  dkp-history-obj.c  dkp-history-obj.h  dkp-object.c  dkp-object.h  dkp-stats-obj.c  dkp-stats-obj.h  dkp-wakeups-obj.c  dkp-wakeups-obj.h  dkp-wakeups.c  dkp-wakeups.h  egg-obj-list.c  egg-obj-list.h
libgpm-glib/: Makefile.am  libgpm.c  libgpm.h
libhal-glib/: .gitignore  Makefile.am  egg-dbus-monitor.c  egg-dbus-monitor.h  egg-dbus-proxy.c  egg-dbus-proxy.h  hal-device-store.c  hal-device-store.h  hal-device.c  hal-device.h  hal-manager.c  hal-manager.h  libhal-gcpufreq.c  libhal-gcpufreq.h  libhal-gdevice.c  libhal-gdevice.h  libhal-gdevicestore.c  libhal-gdevicestore.h  libhal-gmanager.c  libhal-gmanager.h  libhal-gpower.c  libhal-gpower.h  libhal-marshal.list
libidletime/: Makefile.am  libidletime.c  libidletime.h
libunique/: Makefile.am  libunique.c  libunique.h
man/: .gitignore  Makefile.am  gnome-power-manager.sgml  gnome-power-statistics.sgml  meson.build
policy/: .gitignore  Makefile.am  org.gnome.power.policy.in  org.gnome.power.policy.in2
src/: .cvsignore  .gitignore  Makefile.am  README  cc-power-panel.c  cc-power-panel.h  compiler.h  dbus-common.c  dbus-common.h  egg-array-float.c  egg-array-float.h  egg-color.c  egg-color.h  egg-console-kit.c  egg-console-kit.h  egg-dbus-monitor.c  egg-dbus-monitor.h  egg-dbus-proxy.c  egg-discrete.c  egg-discrete.h  egg-graph-point.h  egg-graph-widget.c  egg-graph-widget.h  egg-idletime.c  egg-idletime.h  egg-obj-list.c  egg-obj-list.h  egg-precision.c  egg-precision.h  egg-string.c  egg-test.c  egg-unique.c  egg-unique.h  eggtrayicon.c  eggtrayicon.h  gdb-efence.gdb  gdb-gpm.sh  gdb-underfence.gdb  glibhal-callback.c  glibhal-callback.h  (+233 more)
test/: .gitignore  Makefile.am  gpm-inhibit-test.c  gpm-self-test.c  gpm-selftest-hal-devices.fdi  gpm-st-array-float.c  gpm-st-array.c  gpm-st-cell-array.c  gpm-st-cell-unit.c  gpm-st-cell.c  gpm-st-common.c  gpm-st-graph-widget.c  gpm-st-hal-device.c  gpm-st-hal-devicestore.c  gpm-st-hal-manager.c  gpm-st-hal-power.c  gpm-st-idletime.c  gpm-st-inhibit.c  gpm-st-main.c  gpm-st-main.h  gpm-st-profile.c  gpm-st-proxy.c  gpm-st-webcam.c  install-fdi.sh
(+199 files in other folders)
